Buying a move tutor move now allows the player to pick which slot it goes into